--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,11 @@
         <lombok.mapstruct.version>0.2.0</lombok.mapstruct.version>
         <postgresql.version>42.7.2</postgresql.version>
         <swagger.version>2.2.25</swagger.version>
-        <springdoc.version>2.5.0</springdoc.version>
+        <springdoc-webmvc-ui.version>2.6.0</springdoc-webmvc-ui.version>
         <flyway.version>10.21.0</flyway.version>
         <springdoc.version>1.6.6</springdoc.version>
         <keycloak-adapter.version>16.1.1</keycloak-adapter.version>
+        <jakarta-validation.version>3.1.0</jakarta-validation.version>
     </properties>
 
     <dependencies>
@@ -78,30 +79,30 @@
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
-            <version>3.1.0</version>
+            <version>${jakarta-validation.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.6.0</version>
+            <version>${springdoc-webmvc-ui.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok-mapstruct-binding</artifactId>
             <version>${lombok.mapstruct.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-oauth2-client</artifactId>-->
 <!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
 
     </dependencies>
 
