--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <springdoc.version>1.6.6</springdoc.version>
         <keycloak-adapter.version>16.1.1</keycloak-adapter.version>
         <jakarta-validation.version>3.1.0</jakarta-validation.version>
+        <keycloak.adminclient.version>26.0.5</keycloak.adminclient.version>
     </properties>
 
     <dependencies>
@@ -103,7 +104,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-admin-client</artifactId>
+            <version>26.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
