--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,8 @@ spring:
         id:
           new_generator_mappings: false
     show-sql: true
+  messages:
+    encoding: UTF-8
 
   security:
     oauth2:
